@@ -9,6 +9,10 @@
      than listening on all interfaces, which was the previous default. (Dave
      Rolsky)
    - Fix the script environment variables MYAPP_PORT and MYAPP_RELOAD RT#52604
+   - Fix aliasing applications under non-root paths with mod_rewrite in
+     some apache versions where %ENV{SCRIPT_NAME} is set to the real name of
+     the script, by using $ENV{REDIRECT_URL} which contains the non-rewritten
+     URI.
 
   New features:
    - The __MOP__ hash element is suppressed from being dumped fully
